--- a/src/vscp/helperlib/linux/Makefile.in
+++ b/src/vscp/helperlib/linux/Makefile.in
@@ -11,7 +11,7 @@ top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CXX = @CXX@
 CXXFLAGS = @CXXFLAGS@ -fPIC -D__LINUX__ -I../../common -I../../../common
-CPPFLAGS = @CPPFLAGS@ -fPIC -DUSE_FOSSA -I../../common -I../../../common
+CPPFLAGS = @CPPFLAGS@ -fPIC -DUSE_FOSSA -D NS_ENABLE_THREADS -I../../common -I../../../common
 CFLAGS = -fPIC -D__LINUX__ 
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
