Synced changes on Windows with Linux

--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -54,6 +54,7 @@ VSCPD_OBJECTS =  vscpd.o \
 	../../common/vscpautomation.o \
 	../../common/mdf.o \
 	../../common/register.o \
+	../../common/knownnodes.o \
 	../../../common/dllist.o \
 	../../../common/configfile.o \
 	../../../common/crc.o \
