Synced Linux build with Windows build

--- a/src/vscp/vscpworks/Makefile.in
+++ b/src/vscp/vscpworks/Makefile.in
@@ -77,6 +77,7 @@ VSCPWORKS_OBJECTS =  vscpworks.o dlgvscpmsg.o \
 	../common/register.o \
 	../common/canalconfobj.o \
 	../common/vscpmulticast.o \
+	../common/knownnodes.o \
 	$(RESOURCEOBJECT)
 
 ALWAYS_BUILD = ../../common/crc.o \
