Fixed bug in http action code

--- a/src/vscp/daemon/linux/nbproject/private/CodeAssistancePathMapper.properties
+++ b/src/vscp/daemon/linux/nbproject/private/CodeAssistancePathMapper.properties
@@ -1,1 +1,3 @@
-# Automatic path mapper. CRC = 1
+# Automatic path mapper. CRC = 4147585483
+/usr/include/wx-3.0/wx/xml=/usr/include/wx-3.0/wx/xml
+/usr/include/openssl=/usr/include/openssl
