Added new DM escapes %amp, %amp-html, %lt, %lt.html, %gt, %gt.htm path escapes now use path. instead of path. to be cisistent %variable: escape now works. execute action no longer leaves zoombies with wx 3.0 and higher

--- a/src/vscp/drivers/level2/wire1/linux/vscp2drv_wire1.project
+++ b/src/vscp/drivers/level2/wire1/linux/vscp2drv_wire1.project
@@ -290,4 +290,6 @@
     <File Name="../../../../common/old/StdAfx.h"/>
     <File Name="../../../../common/old/clientthread_level2_win32.cpp"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug"/>
+  <Dependencies Name="Release"/>
 </CodeLite_Project>
