--- a/src/vscp/daemon/linux/codelite_vscpd/codelite_vscpd.project
+++ b/src/vscp/daemon/linux/codelite_vscpd/codelite_vscpd.project
@@ -104,7 +104,7 @@
       </Compiler>
       <Linker Options="" Required="yes"/>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="" IntermediateDirectory="/home/akhe/vscp_software/src/vscp/daemon/linux" Command="/home/akhe/vscp_software/src/vscp/daemon/linux/vscpd" CommandArguments="-s" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="/home/akhe/vscp_software/src/vscp/daemon/linux" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <General OutputFile="" IntermediateDirectory="/home/akhe/development/vscp/src/vscp/daemon/linux" Command="/home/akhe/development/vscp/src/vscp/daemon/linux/vscpd" CommandArguments="-s" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="/home/akhe/development/vscp/src/vscp/daemon/linux" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
       </Environment>
@@ -123,13 +123,13 @@
         <SingleFileCommand/>
         <MakefileGenerationCommand/>
         <ThirdPartyToolName>None</ThirdPartyToolName>
-        <WorkingDirectory>/home/akhe/vscp_software/src/vscp/daemon/linux</WorkingDirectory>
+        <WorkingDirectory>/home/akhe/development/vscp/src/vscp/daemon/linux</WorkingDirectory>
       </CustomBuild>
       <AdditionalRules>
         <CustomPostBuild/>
         <CustomPreBuild/>
       </AdditionalRules>
-      <Completion EnableCpp11="no">
+      <Completion EnableCpp11="no" EnableCpp14="no">
         <ClangCmpFlagsC/>
         <ClangCmpFlags/>
         <ClangPP/>
@@ -167,7 +167,7 @@
         <CustomPostBuild/>
         <CustomPreBuild/>
       </AdditionalRules>
-      <Completion EnableCpp11="no">
+      <Completion EnableCpp11="no" EnableCpp14="no">
         <ClangCmpFlagsC/>
         <ClangCmpFlags/>
         <ClangPP/>
