ixed string writeout problem for CLASS1.MEASUERMENT_FLOAT. Works as expected now

--- a/src/vscp/drivers/level2/mqtt/linux/mqtt-driver/mqtt-driver.project
+++ b/src/vscp/drivers/level2/mqtt/linux/mqtt-driver/mqtt-driver.project
@@ -121,4 +121,6 @@
     <File Name="../Makefile.in"/>
     <File Name="../Makefile"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug"/>
+  <Dependencies Name="Release"/>
 </CodeLite_Project>
