Changed SSL switch

--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Autoconf settings for VSCP
 dnl $Id: configure.in,v 1.5 2005/10/03 16:30:06 akhe Exp $
 
-AC_INIT(vscp, [1.1.0], [info@grodansparadis.com])
+AC_INIT(vscp, [1.2.0], [info@grodansparadis.com])
 
 CONFIGURE_LINE="$0 $*"
 CODENAME="Ant"
@@ -173,8 +173,8 @@ fi
 EXTRALIBS="${EXTRALIBS} ${LIBS}" 
 
 if test "${vscp_ssl}" = yes ; then
-   CPPFLAGS="$CPPFLAGS -D NS_ENABLE_SSL"
-   CFLAGS="$CFLAGS -D NS_ENABLE_SSL"
+   CPPFLAGS="$CPPFLAGS -D MG_ENABLE_SSL"
+   CFLAGS="$CFLAGS -D MG_ENABLE_SSL"
 fi
 
 
