--- a/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
+++ b/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
@@ -35,8 +35,20 @@ DLLPREFIX = lib
 WX_RELEASE = 2.8
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-LMSENSOROBJ =  lmsensors.o ../../../../../common/crc.o ../../../../../common/crc8.o ../../../../../common/mongoose.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
-PROJOBJS = lmsensors.o ../../../../../common/crc.o  ../../../../../common/crc8.o ../../../../../common/mongoose.o ../../../../common/vscptcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o 
+LMSENSOROBJ =  lmsensors.o \
+	../../../../../common/crc.o\
+	../../../../../common/crc8.o\
+	../../../../../common/mongoose.o\
+	../../../../common/vscpremotetcpif.o\
+	../../../../common/vscphelper.o\
+	../../../../common/guid.o
+PROJOBJS = lmsensors.o\
+	../../../../../common/crc.o\
+	../../../../../common/crc8.o\
+	../../../../../common/mongoose.o\
+	../../../../common/vscptcpif.o\
+	../../../../common/vscphelper.o\
+	../../../../common/guid.o 
 
 
 
