--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -11,7 +11,7 @@ top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CXX = @CXX@
 CXXFLAGS =  @CXXFLAGS@ 
-CPPFLAGS = @CPPFLAGS@ -D MG_ENABLE_THREADS -I../../common -I../../../common
+CPPFLAGS = @CPPFLAGS@ -D MG_ENABLE_THREADS -I../../common -I../../../common `lua-config --include --libs`
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 STRIP = strip
