--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Autoconf settings for VSCP
 dnl $Id: configure.in,v 1.5 2005/10/03 16:30:06 akhe Exp $
 
-AC_INIT(vscp, [1.2.0], [info@grodansparadis.com])
+AC_INIT(vscp, [1.12.0], [info@grodansparadis.com])
 
 CONFIGURE_LINE="$0 $*"
 CODENAME="Ant"
@@ -35,13 +35,13 @@ AC_CHECK_LIB([rt],[clock_gettime])
 AC_CHECK_LIB([z], [gzopen])
 AC_CHECK_LIB([pcap], [pcap_open_live])
 AC_CHECK_LIB([ssl], [SSL_free])
-AC_CHECK_LIB([mosquittopp], [_init])
+AC_CHECK_LIB([lua5.2], [luaL_newstate])
 
 # Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS([OS.h arpa/inet.h fcntl.h inttypes.h limits.h locale.h netdb.h netinet/in.h sgtty.h stddef.h stdint.h stdlib.h string.h strings.h sys/file.h sys/ioctl.h sys/socket.h sys/time.h sys/timeb.h syslog.h termios.h unistd.h openssl/md5.h ])
+AC_CHECK_HEADERS([OS.h arpa/inet.h fcntl.h inttypes.h limits.h locale.h netdb.h netinet/in.h sgtty.h stddef.h stdint.h stdlib.h string.h strings.h sys/file.h sys/ioctl.h sys/socket.h sys/time.h sys/timeb.h syslog.h termios.h unistd.h openssl/md5.h lua5.2/lua.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
@@ -102,6 +102,15 @@ AC_ARG_ENABLE(debug,
 [  --enable-debug          debug mode (default disabled)],
 [vscp_debug=yes])
 dnl test "${vscp_debug}" != "yes" && vscp_debug="no"
+
+dnl
+dnl SSL mode
+dnl
+vscp_lua=yes
+AC_ARG_ENABLE(ssl,
+[  --enable-lua            ssl build (default enabled)],
+[vscp_lua=yes])
+dnl test "${vscp_lua}" != "yes" && vscp_lua="no"
 
 
 dnl
@@ -177,6 +186,12 @@ if test "${vscp_ssl}" = yes ; then
    CFLAGS="$CFLAGS -D MG_ENABLE_SSL"
 fi
 
+if test "${vscp_lua}" = yes ; then
+   CPPFLAGS="$CPPFLAGS -D VSCP_ENABLE_LUA -I/usr/include/lua5.2"  
+   CFLAGS="$CFLAGS -D VSCP_ENABLE_LUA -I/usr/include/lua5.2"
+   EXTRALIBS="$EXTRALIBS -llua5.2"
+fi
+
 
 
 dnl 
@@ -250,6 +265,13 @@ else
    printf "non-SSL "
 fi
 
+if test "${vscp_lua}" = "yes"
+then
+   printf "LUA "
+else
+   printf "non-LUA "
+fi
+
 
 printf " 
 You can tune the compiler flags in vscp-config.
@@ -257,6 +279,7 @@ To build VSCP and friends, type \'make\' followed by \'make install\'
 
  use --enable-debug to build a debug version; release is default.
  use --enable-ssl to build a SSL version of executables; Non SSL is default.
+ use --disable-lua to build with LUA support.
  use --disable-unicode to build an Ansi version; Unicode is default.
 
 "
