--- a/src/vscp/daemon/win32/vscpd.vcxproj
+++ b/src/vscp/daemon/win32/vscpd.vcxproj
@@ -226,7 +226,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
       <AdditionalIncludeDirectories>.\;$(OPENSSL64)\include;$(WXWIN)\include\msvc;$(WXWIN)\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_WINSOCK_DEPRECATED_NO_WARNINGS;NS_ENABLE_SSL;NOEMBED_NET_SKELETON;DEBUG;WIN32;_CONSOLE;WINVER=0x0601;_MT;wxUSE_GUI=0;__WXDEBUG__;WXDEBUG=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WINSOCK_DEPRECATED_NO_WARNINGS;NS_ENABLE_EXCLUDE_COMMON;DEBUG;WIN32;_CONSOLE;WINVER=0x0601;_MT;wxUSE_GUI=0;__WXDEBUG__;WXDEBUG=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <BrowseInformation>true</BrowseInformation>
       <PrecompiledHeaderOutputFile>$(OutDir)$(TargetName).pch</PrecompiledHeaderOutputFile>
@@ -535,9 +535,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\common\crc8.c" />
-    <ClCompile Include="..\..\..\common\frozen.c" />
     <ClCompile Include="..\..\..\common\mongoose.c" />
-    <ClCompile Include="..\..\..\common\net_skeleton.c" />
     <ClCompile Include="..\..\..\common\randpassword.cpp" />
     <ClCompile Include="..\..\common\clientlist.cpp" />
     <ClCompile Include="..\..\common\controlobject.cpp" />
@@ -560,7 +558,9 @@
     <ClCompile Include="..\..\common\vscpautomation.cpp" />
     <ClCompile Include="..\..\common\vscpeventhelper.cpp" />
     <ClCompile Include="..\..\common\vscpremotetcpif.cpp" />
+    <ClCompile Include="..\..\common\vscprestserver.cpp" />
     <ClCompile Include="..\..\common\vscpwebserver.cpp" />
+    <ClCompile Include="..\..\common\vscpwebsocketserver.cpp" />
     <ClCompile Include="vscpd.cpp" />
     <ClCompile Include="..\..\common\vscphelper.cpp" />
     <ClCompile Include="..\..\common\vscpvariable.cpp" />
