--- a/src/vscp/drivers/level2/btdetect/win32/vscpbtdetect.vcxproj
+++ b/src/vscp/drivers/level2/btdetect/win32/vscpbtdetect.vcxproj
@@ -303,7 +303,7 @@ copy  /Y "$(OutDir)/$(TargetName).lib" "$(VSCP_INSTALL)\files\drivers\$(Platform
     <ClCompile Include="..\..\..\..\..\common\crc.c" />
     <ClCompile Include="..\..\..\..\..\common\crc8.c" />
     <ClCompile Include="..\..\..\..\..\common\dllist.c" />
-    <ClCompile Include="..\..\..\..\..\common\fossa.c" />
+    <ClCompile Include="..\..\..\..\..\common\mongoose.c" />
     <ClCompile Include="..\..\..\..\common\guid.cpp" />
     <ClCompile Include="..\..\..\..\common\vscphelper.cpp" />
     <ClCompile Include="..\..\..\..\common\vscpremotetcpif.cpp" />
@@ -318,7 +318,7 @@ copy  /Y "$(OutDir)/$(TargetName).lib" "$(VSCP_INSTALL)\files\drivers\$(Platform
     <ClInclude Include="..\..\..\..\..\common\crc.h" />
     <ClInclude Include="..\..\..\..\..\common\crc8.h" />
     <ClInclude Include="..\..\..\..\..\common\dllist.h" />
-    <ClInclude Include="..\..\..\..\..\common\fossa.h" />
+    <ClInclude Include="..\..\..\..\..\common\mongoose.h" />
     <ClInclude Include="..\..\..\..\common\guid.h" />
     <ClInclude Include="..\..\..\..\common\vscp.h" />
     <ClInclude Include="..\..\..\..\common\vscphelper.h" />
