--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Autoconf settings for VSCP
 dnl $Id: configure.in,v 1.5 2005/10/03 16:30:06 akhe Exp $
 
-AC_INIT(vscp, [1.12.0], [info@grodansparadis.com])
+AC_INIT(vscp, [1.12.5], [info@grodansparadis.com])
 
 CONFIGURE_LINE="$0 $*"
 CODENAME="Ant"
@@ -36,12 +36,13 @@ AC_CHECK_LIB([z], [gzopen])
 AC_CHECK_LIB([pcap], [pcap_open_live])
 AC_CHECK_LIB([ssl], [SSL_free])
 AC_CHECK_LIB([lua5.2], [luaL_newstate])
+AC_CHECK_LIB([sqlite3],[sqlite3_open])
 
 # Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS([OS.h arpa/inet.h fcntl.h inttypes.h limits.h locale.h netdb.h netinet/in.h sgtty.h stddef.h stdint.h stdlib.h string.h strings.h sys/file.h sys/ioctl.h sys/socket.h sys/time.h sys/timeb.h syslog.h termios.h unistd.h openssl/md5.h lua5.2/lua.h])
+AC_CHECK_HEADERS([OS.h arpa/inet.h fcntl.h inttypes.h limits.h locale.h netdb.h netinet/in.h sgtty.h stddef.h stdint.h stdlib.h string.h strings.h sys/file.h sys/ioctl.h sys/socket.h sys/time.h sys/timeb.h syslog.h termios.h unistd.h openssl/md5.h lua5.2/lua.h,sqlite3])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
@@ -104,13 +105,23 @@ AC_ARG_ENABLE(debug,
 dnl test "${vscp_debug}" != "yes" && vscp_debug="no"
 
 dnl
-dnl SSL mode
+dnl LUA
 dnl
 vscp_lua=yes
-AC_ARG_ENABLE(ssl,
-[  --enable-lua            ssl build (default enabled)],
+AC_ARG_ENABLE(lua,
+[  --enable-lua            LUA build (default enabled)],
 [vscp_lua=yes])
 dnl test "${vscp_lua}" != "yes" && vscp_lua="no"
+
+dnl
+dnl SQLite3
+dnl
+vscp_sqlite3=yes
+AC_ARG_ENABLE(sqlite3,
+[  --enable-sqlite2          SQLite3 build (default enabled)],
+[vscp_sqlite3=yes])
+dnl test "${vscp_sqlite3}" != "yes" && vscp_sqlite3="no"
+
 
 
 dnl
@@ -192,6 +203,13 @@ if test "${vscp_lua}" = yes ; then
    EXTRALIBS="$EXTRALIBS -llua5.2"
 fi
 
+if test "${vscp_sqlite3}" = yes ; then
+   CPPFLAGS="$CPPFLAGS -D VSCP_ENABLE_SQLITE3"
+   CFLAGS="$CFLAGS -D VSCP_ENABLE_SQLITE3"
+   EXTRALIBS="$EXTRALIBS -lsqlite3"
+fi
+
+
 
 
 dnl 
@@ -272,6 +290,14 @@ else
    printf "non-LUA "
 fi
 
+if test "${vscp_sqlite3}" = "yes"
+then
+   printf "SQLite3 "
+else
+   printf "non-SQLite3 "
+fi
+
+
 
 printf " 
 You can tune the compiler flags in vscp-config.
@@ -280,6 +306,7 @@ To build VSCP and friends, type \'make\' followed by \'make install\'
  use --enable-debug to build a debug version; release is default.
  use --enable-ssl to build a SSL version of executables; Non SSL is default.
  use --disable-lua to build with LUA support.
+ use --disable-sqglite3 to build without SQLite3
  use --disable-unicode to build an Ansi version; Unicode is default.
 
 "
