--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Autoconf settings for VSCP
 dnl $Id: configure.in,v 1.5 2005/10/03 16:30:06 akhe Exp $
 
-AC_INIT(vscp, [1.12.9], [info@grodansparadis.com])
+AC_INIT(vscp, [1.12.0], [info@grodansparadis.com])
 
 CONFIGURE_LINE="$0 $*"
 CODENAME="Ant"
@@ -88,40 +88,38 @@ dnl
 dnl SSL mode
 dnl
 
-vscp_ssl=yes
-AC_ARG_ENABLE(ssl,
-[  --enable-ssl            ssl build (default enabled)],
-[vscp_ssl=yes])
-dnl test "${vscp_ssl}" != "yes" && vscp_ssl="no"
 
+AC_ARG_ENABLE(ssl,
+[  --disable-ssl           ssl build (default enabled)],
+[vscp_ssl=no],[vscp_ssl=yes])
+dnl test "${vscp_ssl}" != "yes" && vscp_ssl="no"
 
 dnl
 dnl  Debugging mode
 dnl
 
-vscp_debug=no
+
 AC_ARG_ENABLE(debug,
 [  --enable-debug          debug mode (default disabled)],
-[vscp_debug=yes])
+[vscp_debug=yes],[vscp_debug=no])
 dnl test "${vscp_debug}" != "yes" && vscp_debug="no"
 
 dnl
 dnl LUA
 dnl
 
-vscp_lua=yes
 AC_ARG_ENABLE(lua,
-[  --enable-lua            LUA build (default enabled)],
-[vscp_lua=yes])
+[  --disable-lua            LUA build (default enabled)],
+[vscp_lua=no],[vscp_lua=yes])
 dnl test "${vscp_lua}" != "yes" && vscp_lua="no"
 
 dnl
 dnl SQLite3
 dnl
-vscp_sqlite3=yes
+
 AC_ARG_ENABLE(sqlite3,
-[  --enable-sqlite2          SQLite3 build (default enabled)],
-[vscp_sqlite3=yes])
+[  --disable-sqlite2          SQLite3 build (default enabled)],
+[vscp_sqlite3=no],[vscp_sqlite3=yes])
 dnl test "${vscp_sqlite3}" != "yes" && vscp_sqlite3="no"
 
 
@@ -306,9 +304,9 @@ You can tune the compiler flags in vscp-config.
 To build VSCP and friends, type \'make\' followed by \'make install\'
 
  use --enable-debug to build a debug version; release is default.
- use --enable-ssl to build a SSL version of executables; Non SSL is default.
+ use --disable-ssl to build a SSL version of executables; Non SSL is default.
  use --disable-lua to build with LUA support.
- use --disable-sqglite3 to build without SQLite3
+ use --disable-sglite3 to build without SQLite3
  use --disable-unicode to build an Ansi version; Unicode is default.
 
 "
