--- a/Makefile.in
+++ b/Makefile.in
@@ -20,6 +20,47 @@ install:
 	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
 	echo "Building in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) install); done
 #	lsb_release -i
+# startup script	
+	$(INSTALL_PROGRAM) -b -m755 vscpd.startup_script_debian /etc/init.d/vscpd
+	update-rc.d vscpd defaults
+	mkdir -p /etc/vscp	
+# vscpd config file
+ifneq ("$(wildcard /etc/vscp/vscpd.conf)","")
+	@read -p "Shall the default vscpd.conf file be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then $(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf; fi;
+else
+	$(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
+endif
+	@echo
+	@echo
+	@echo "Your VSCP & Friends system is now installed."
+	@echo "============================================"
+	@echo
+	@echo " - Start the VSCP daemon with 'sudo /etc/init.d/vscpd start'"
+	@echo "   or 'vscpd -s' to start the daemon in the  foreground."
+	@echo
+	@echo " - Admin interface is at http://localhost:8080/vscp"
+	@echo "   Username: admin, Password: secret"	
+	@echo
+	@echo " - If you have installed the sample content it is located at"
+	@echo "   http://localhost:8080. Remember to change the ip address"
+	@echo "   in the file /srv/vscp/web/testws/settings.js to your local"
+	@echo "   ip address ($(IPADDRESS)) to be able to access this content from other "
+	@echo "   machines than your local machine."
+	@echo
+	@echo " - You can reach core functionality in the telnet interface on"	
+	@echo "   this machine at port 9598. Username: admin, Password: secret"
+	@echo
+	@echo " - The configuration file for the VSCP daemon is at /etc/vscd/vscpd.conf and"
+	@echo "   you can read about the different available options here "
+	@echo "   http://www.vscp.org/docs/vscpd/doku.php?id=configuring_the_vscp_daemon"
+	@echo "   Other configuration files is under /srv/vscp"
+	@echo	
+	@echo " - Documentation is at http://www.vscp.org/docs/vscpd/doku.php asd more general"
+	@echo "   documentation is at http://www.vscp.org/docs"
+	@echo
+	@echo "   Have fun and remember to always be hungry and stay foolish or the other way"
+	@echo "   around be foolish - stay hungry! There is always a choice."
+config:
 	mkdir -p /srv/vscp/actions
 	mkdir -p /srv/vscp/web
 	mkdir -p /srv/vscp/certs
@@ -66,34 +107,11 @@ else
 endif
 # Web content
 	@read -p "Shall default web content be copied (y/n)? " RESP; if [ "y" = $$RESP -o "Y" = $$RESP  ]; then cp -r config_examples/web/* /srv/vscp/web/; fi;
-	@echo
-	@echo
-	@echo "Your VSCP & Friends system is now installed."
-	@echo "============================================"
-	@echo
-	@echo " - Start the VSCP daemon with 'sudo /etc/init.d/vscpd start'"
-	@echo "   or 'vscpd -s' to start the daemon in the  foreground."
-	@echo
-	@echo " - Admin interface is at http://localhost:8080/vscp"
-	@echo "   Username: admin, Password: secret"	
-	@echo
-	@echo " - If you have installed the sample content it is located at"
-	@echo "   http://localhost:8080. Remember to change the ip address"
-	@echo "   in the file /srv/vscp/web/testws/settings.js to your local"
-	@echo "   ip address ($(IPADDRESS)) to be able to access this content from other "
-	@echo "   machines than your local machine."
-	@echo
-	@echo " - You can reach core functionality in the telnet interface on"	
-	@echo "   this machine at port 9598. Username: admin, Password: secret"
-	@echo
-	@echo " - The configuration file for the VSCP daemon is at /etc/vscd/vscpd.conf and"
-	@echo "   you can read about the different available options here "
-	@echo "   http://www.vscp.org/docs/vscpd/doku.php?id=configuring_the_vscp_daemon"
-	@echo "   Other configuration files is under /srv/vscp"
-	@echo	
-	@echo " - Documentation is at http://www.vscp.org/docs/vscpd/doku.php asd more general"
-	@echo "   documentation is at http://www.vscp.org/docs"
-	@echo
-	@echo "   Have fun and remember to always be hungry and stay foolish or the other way"
-	@echo "   around be foolish - stay hungry! There is always a choice."
 
+web-files:
+	mkdir -p /srv/vscp/web
+	mkdir -p /srv/vscp/web/css
+	mkdir -p /srv/vscp/web/images
+	mkdir -p /srv/vscp/web/lib
+	mkdir -p /srv/vscp/web/testws
+	cp -r config_examples/web/* /srv/vscp/web/;
