Added VSCP MQTT broker

--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -57,6 +57,7 @@ VSCPD_OBJECTS =  vscpd.o \
 	../../common/mdf.o \
 	../../common/register.o \
 	../../common/knownnodes.o \
+	../../common/vscpmqttbroker \
 	../../../common/dllist.o \
 	../../../common/configfile.o \
 	../../../common/crc.o \
